--- a/agro/package.json
+++ b/agro/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "chart.js": "^4.4.2",
+    "chart.js": "^4.4.3",
+    "css.gg": "^2.1.1",
+    "lucide-react": "^0.394.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
