--- a/agro/package.json
+++ b/agro/package.json
@@ -15,11 +15,13 @@
     "css.gg": "^2.1.1",
     "lucide-react": "^0.394.0",
     "moment": "^2.30.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.12.0",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
